not fully fix navigation bar on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,14 +79,14 @@ h6 {
 #header {
   z-index: 997;
   transition: all 0.5s;
-  padding: 22px 0;
+  padding: 10px 0;
   background: #000000;
   width: 100vw;
 }
 
 #header.header-scrolled {
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-  padding: 12px 0;
+  /* padding: 12px 0; */
 }
 
 #header .logo h1 {
@@ -117,6 +117,7 @@ h6 {
   position: relative;
   background-color: #333;
   overflow: hidden;
+  height: 8vh;
 }
 
 /* Style the links inside the navigation bar */
@@ -124,7 +125,7 @@ h6 {
   float: left;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  /* padding: 14px 16px; */
   text-decoration: none;
   font-size: 17px;
 }
@@ -156,18 +157,34 @@ h6 {
 }
 
 /* Responsive navigation menu - display links on top of each other instead of next to each other (for mobile devices) */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 991px) {
   .topnav a, .topnav-right {
     float: none;
     display: block;
   }
 
   .topnav-centered a {
-    position: relative;
-    top: 0;
-    left: 0;
+    position: absolute;
+    top: 10px;
+    left: 50%;
     transform: none;
   }
+   .mobile-nav-toggle.bi-x{
+    position: relative;
+    left: 1px;
+  }  
+}
+@media only screen and (max-width: 992px) and (min-width: 600px)  {
+ .mobile-nav-toggle{
+  position: relative;
+  left: -35px;
+ }
+
+ .mobile-nav-toggle.bi-x{
+  position: relative;
+  left: none;
+  top: none;
+ }
 }
 
 /*--------------------------------------------------------------
@@ -405,13 +422,13 @@ h6 {
   bottom: 0;
   background: rgba(9, 9, 9, 0.9);
   transition: 0.3s;
-  z-index: 999;
+  /* z-index: 999; */
 }
 
 .navbar-mobile .mobile-nav-toggle {
   position: absolute;
-  top: 15px;
-  left: 30px;
+  top: 12px;
+  left: 12px;
 }
 
 .navbar-mobile ul {
@@ -498,7 +515,7 @@ h6 {
   display: block;
 }
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 576px) {
   .navbar-mobile ul {
   max-width: 100%;
 }}
@@ -512,7 +529,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  margin-top: 70px;
+  margin-top: 55px;
   background-color: #000000;
   text-align: center;
   justify-content: center;
